--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,3 +33,28 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
+  build-streamlit-image:
+    runs-on: ubuntu-latest
+    needs: python-package
+    steps:
+    - uses: actions/checkout@v2
+    - id: latest_release
+      uses: pozetroninc/github-action-get-latest-release@master
+      with:
+        owner: compomics
+        repo: DeepLC
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and push to ghcr.io
+      uses: docker/build-push-action@v2
+      with:
+        context: streamlit
+        push: false
+        tags: |
+          ghcr.io/compomics/deeplc-streamlit:${{ steps.latest_release.outputs.release }}
+          ghcr.io/compomics/deeplc-streamlit:latest
