--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: Publish to PyPI and GitHub release
 
 on:
   push:
-  #   tags:
-  #   - 'v*'
+    tags:
+    - 'v*'
 
 jobs:
   python-package:
@@ -83,6 +83,7 @@ jobs:
 
   build-streamlit-image:
     runs-on: ubuntu-latest
+    needs: python-package
     steps:
     - uses: actions/checkout@v2
     - id: latest_release
