--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,50 +11,49 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ['3.9', '3.10']
+        python-version: ["3.9", "3.10"]
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install --editable .
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          pip install --editable .
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Test with pytest
+        run: |
+          pytest
 
   build-streamlit-image:
     runs-on: ubuntu-latest
-    needs: python-package
     steps:
-    - uses: actions/checkout@v2
-    - id: latest_release
-      uses: pozetroninc/github-action-get-latest-release@master
-      with:
-        owner: compomics
-        repo: DeepLC
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build and push to ghcr.io
-      uses: docker/build-push-action@v2
-      with:
-        context: streamlit
-        push: false
-        tags: |
-          ghcr.io/compomics/deeplc-streamlit:${{ steps.latest_release.outputs.release }}
-          ghcr.io/compomics/deeplc-streamlit:latest
+      - uses: actions/checkout@v2
+      - id: latest_release
+        uses: pozetroninc/github-action-get-latest-release@master
+        with:
+          owner: compomics
+          repo: DeepLC
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push to ghcr.io
+        uses: docker/build-push-action@v2
+        with:
+          context: streamlit
+          push: true
+          tags: |
+            ghcr.io/compomics/deeplc-streamlit:${{ steps.latest_release.outputs.release }}
+            ghcr.io/compomics/deeplc-streamlit:latest
