--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,17 +8,16 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        system: [["3.8", "windows-latest"], ["3.8", "macos-latest"], ["3.8", "ubuntu-latest"], ["3.9", "ubuntu-latest"], ["3.10", "ubuntu-latest"], ["3.11", "ubuntu-latest"]]
+    runs-on: ${{ matrix.system[1] }}
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.system[0] }}
+        uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.system[0] }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
