--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,8 @@ jobs:
         python -m build . --sdist --wheel
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        skip-existing: true
     - name: Upload compiled wheels
       uses: actions/upload-artifact@v4
       with:
@@ -66,6 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [python-package, windows-installer]
     steps:
+    - uses: actions/checkout@v4
     - name: Download installer
       uses: actions/download-artifact@v4
       with:
@@ -79,7 +82,8 @@ jobs:
         CHANGELOG_FILE: "CHANGELOG.md"
       with:
         args: |
-          dist/*
+          dist/**/*.exe
+          dist/**/*.whl
 
   build-streamlit-image:
     runs-on: ubuntu-latest
