--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
     "h5py>=2.10.0,<4",
     "pygam>=0.8.0,<1",
     "deeplcretrainer>=1,<2",
-    "psm_utils>=0.2.3,<1",
+    "psm_utils>=0.2.3",
     "hdf5plugin>=4.1.1",
     "scipy>=1.0.0,<1.14.0"
 ]
