--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ keywords = [
 
 dependencies = [
     "tensorflow>=2.15.0,<3",
-    "numpy>=1.17,<2",
+    "numpy>=1.17",
     "pandas>=0.25",
     "scikit-learn>=1.2.0",
     "deeplcretrainer>=1,<2",
