--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ keywords = [
 
 dependencies = [
     "torch>=2.6.0,<3",
+    "onnx2torch>=0.1.5",
     "numpy>=1.17",
     "pandas>=0.25",
     "scikit-learn>=1.2.0",
